# sqlite3-on-update

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.js  test.sql
src/: lib.rs  main.rs
