[package]
name = "sqlite3-on-update"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["hooks", "serde_json"] }
serde_json = "1.0.79"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6","event-queue-api", "try-catch-api"]
